Adjusting organism margins to avoid unwanted gaps

--- a/wp-content/themes/bokka-wp-theme-child/assets/src/css/organisms/brand-window-w-color-overlay.css
+++ b/wp-content/themes/bokka-wp-theme-child/assets/src/css/organisms/brand-window-w-color-overlay.css
@@ -1,6 +1,4 @@
 .section.brand-window-w-color-overlay {
-    margin-bottom: 60px;
-
     .image {
         img {
             display: block;
