--- a/wp-content/themes/bokka-wp-theme-child/assets/src/css/organisms/form-basic.css
+++ b/wp-content/themes/bokka-wp-theme-child/assets/src/css/organisms/form-basic.css
@@ -1,11 +1,17 @@
 .section.form-basic {
     .container {
-        padding: 0 15px;
+        padding: 30px 15px;
+    }
+
+    @mixin tablet {
+        .container {
+            padding: 60px 15px;
+        }
     }
 
     @mixin desktop {
         .container {
-            padding: 30px 0 90px;
+            padding: 90px 0;
         }
     }
 
